--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.dmxiaoshen</groupId>
+			<artifactId>sample-spring-boot-starter</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
